--- a/static/uploader.html
+++ b/static/uploader.html
@@ -36,7 +36,7 @@
     <el-upload
             class="upload-container"
             drag
-            action="/upload"
+            action="/vps-uploader/upload"
             multiple>
         <i class="el-icon-upload"></i>
         <div class="el-upload__text">将文件拖到此处，或<em>点击上传</em></div>
